svg icon for cover

--- a/gmail/kee/index.html
+++ b/gmail/kee/index.html
@@ -13,7 +13,7 @@
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
           <div id="cover">
-              <span class="input-group-label button">GO</span>
+              <img id="dropIcon" src="images/drop.svg" width="224" height="224">
           </div>
           <div class="small-10 medium-8 large-6 cell small-offset-1 medium-offset-2 large-offset-3">
 
