got svg css worked out, needed inline

--- a/gmail/kee/index.html
+++ b/gmail/kee/index.html
@@ -13,7 +13,15 @@
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
           <div id="cover">
-              <img id="dropIcon" src="images/drop.svg" width="224" height="224">
+              <div id="dropIcon">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  viewBox="0 0 455.992 455.992" style="enable-background:new 0 0 455.992 455.992;" xml:space="preserve">
+                  <g class="svg-shape">
+                    <polygon points="227.996,334.394 379.993,182.397 288.795,182.397 288.795,0 167.197,0 167.744,182.397 75.999,182.397"/>
+                    <polygon points="349.594,334.394 349.594,395.193 106.398,395.193 106.398,334.394 45.599,334.394 45.599,395.193 45.599,455.992 410.393,455.992 410.393,334.394"/>
+                  </g>
+                </svg>
+              </div>
           </div>
           <div class="small-10 medium-8 large-6 cell small-offset-1 medium-offset-2 large-offset-3">
 
