--- a/bookmarks/public/index.html
+++ b/bookmarks/public/index.html
@@ -1,141 +1,228 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bookmarks - Read Later</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="main-wrapper">
-        <header class="header">
-            <div class="header-content">
-                <h1><i class="fas fa-bookmark"></i> Bookmarks</h1>
-                <nav class="header-nav">
-                    <ul>
-                        <li class="nav-item active"><i class="fas fa-home"></i> Home</li>
-                        <li class="nav-item"><i class="fas fa-bookmark"></i> Saves</li>
-                        <li class="nav-item"><i class="fas fa-compass"></i> Discover</li>
-                        <li class="nav-item"><i class="fas fa-layer-group"></i> Collections</li>
-                    </ul>
-                </nav>
-                <div class="header-actions">
-                    <button id="addBookmarkBtn" class="btn btn-primary">
-                        <i class="fas fa-plus"></i> Add Bookmark
-                    </button>
-                </div>
-            </div>
-        </header>
-        <div class="main-content-row">
-            <aside class="sidebar">
-                <div class="sidebar-section-label">Filters</div>
-                <div class="filters sidebar-filters">
-                    <div class="search-box">
-                        <input type="text" id="searchInput" placeholder="Search bookmarks...">
-                        <i class="fas fa-search"></i>
-                    </div>
-                    <div class="filter-options">
-                        <select id="tagFilter">
-                            <option value="">All Tags</option>
-                        </select>
-                        <select id="statusFilter">
-                            <option value="">All Status</option>
-                            <option value="0">Unread</option>
-                            <option value="1">Read</option>
-                        </select>
-                        <select id="favoriteFilter">
-                            <option value="">All</option>
-                            <option value="1">Favorites Only</option>
-                        </select>
-                        <select id="sortBy">
-                            <option value="created_at">Date Added</option>
-                            <option value="title">Title</option>
-                            <option value="updated_at">Last Modified</option>
-                        </select>
-                    </div>
-                </div>
-            </aside>
-            <main class="main-content">
-                <div id="bookmarksGrid" class="bookmarks-grid">
-                    <!-- Bookmarks will be loaded here -->
-                </div>
-                <div id="loadingSpinner" class="loading-spinner" style="display: none;">
-                    <i class="fas fa-spinner fa-spin"></i> Loading...
-                </div>
-                <div id="emptyState" class="empty-state" style="display: none;">
-                    <i class="fas fa-bookmark"></i>
-                    <h3>No bookmarks yet</h3>
-                    <p>Start by adding your first bookmark!</p>
-                    <button class="btn btn-primary" onclick="showAddModal()">Add Bookmark</button>
-                </div>
-            </main>
-        </div>
-        <!-- Modals (unchanged) -->
-        <div id="addBookmarkModal" class="modal">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h2>Add New Bookmark</h2>
-                    <span class="close">&times;</span>
-                </div>
-                <div class="modal-body">
-                    <form id="addBookmarkForm">
-                        <div class="form-group">
-                            <label for="urlInput">URL:</label>
-                            <input type="url" id="urlInput" required placeholder="https://example.com">
-                        </div>
-                        <div class="form-group">
-                            <label for="tagsInput">Tags (comma-separated):</label>
-                            <input type="text" id="tagsInput" placeholder="tech, programming, tutorial">
-                        </div>
-                        <div class="form-actions">
-                            <button type="button" class="btn btn-secondary" id="cancelBtn">Cancel</button>
-                            <button type="submit" class="btn btn-primary">Add Bookmark</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-        <div id="editBookmarkModal" class="modal">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h2>Edit Bookmark</h2>
-                    <span class="close">&times;</span>
-                </div>
-                <div class="modal-body">
-                    <form id="editBookmarkForm">
-                        <input type="hidden" id="editId">
-                        <div class="form-group">
-                            <label for="editTitle">Title:</label>
-                            <input type="text" id="editTitle" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="editDescription">Description:</label>
-                            <textarea id="editDescription" rows="3"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <label for="editTags">Tags:</label>
-                            <input type="text" id="editTags" placeholder="tech, programming, tutorial">
-                        </div>
-                        <div class="form-group">
-                            <label>
-                                <input type="checkbox" id="editReadStatus"> Mark as read
-                            </label>
-                        </div>
-                        <div class="form-group">
-                            <label>
-                                <input type="checkbox" id="editFavorite"> Mark as favorite
-                            </label>
-                        </div>
-                        <div class="form-actions">
-                            <button type="button" class="btn btn-secondary" id="editCancelBtn">Cancel</button>
-                            <button type="submit" class="btn btn-primary">Save Changes</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="app.js"></script>
-</body>
-</html> 
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<title>Bookmarks</title>
+		<meta
+			name="color-scheme"
+			content="light dark"
+		/>
+		<link
+			rel="stylesheet"
+			href="index.css"
+		/>
+		<link
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+			rel="stylesheet"
+		/>
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="favicon.svg"
+		/>
+		<link
+			rel="manifest"
+			href="manifest.json"
+		/>
+	</head>
+	<body>
+		<div class="page-header">
+			<h1>
+				<span class="header-icon">
+					<img
+						src="favicon.svg"
+						alt="Bookmarks icon"
+						class="header-icon"
+						width="32"
+						height="32"
+					/>
+				</span>
+				Bookmarks
+			</h1>
+			<div
+				id="header-actions"
+				class="action-buttons"
+			>
+				<button
+					id="addBookmarkBtn"
+					class="btn btn-primary icon-btn"
+					title="Add Bookmark"
+				>
+					<svg
+						width="22"
+						height="22"
+						viewBox="0 0 22 22"
+						fill="none"
+						xmlns="http://www.w3.org/2000/svg"
+						aria-hidden="true"
+						focusable="false"
+						style="display: block"
+					>
+						<circle
+							cx="11"
+							cy="11"
+							r="10"
+							stroke="currentColor"
+							stroke-width="1.5"
+							fill="none"
+						/>
+						<path
+							d="M11 6v10M6 11h10"
+							stroke="currentColor"
+							stroke-width="1.5"
+							stroke-linecap="round"
+						/>
+					</svg>
+				</button>
+			</div>
+		</div>
+		<section id="bookmarks-section">
+			<!-- <h2>All Bookmarks</h2> -->
+			<div
+				class="card-grid"
+				id="bookmarksGrid"
+			>
+				<!-- Bookmarks will be loaded here -->
+			</div>
+		</section>
+		<div
+			id="addBookmarkModal"
+			class="modal"
+		>
+			<div class="modal-content">
+				<div class="modal-header">
+					<h2>Add New Bookmark</h2>
+					<span class="close">&times;</span>
+				</div>
+				<div class="modal-body">
+					<form id="addBookmarkForm">
+						<div class="form-group">
+							<label for="urlInput">URL:</label>
+							<input
+								type="url"
+								id="urlInput"
+								required
+								placeholder="https://example.com"
+							/>
+						</div>
+						<div class="form-group">
+							<label for="tagsInput"
+								>Tags (comma-separated):</label
+							>
+							<input
+								type="text"
+								id="tagsInput"
+								placeholder="tech, programming, tutorial"
+							/>
+						</div>
+						<div class="form-actions">
+							<button
+								type="button"
+								class="btn btn-secondary"
+								id="cancelBtn"
+							>
+								Cancel
+							</button>
+							<button
+								type="submit"
+								class="btn btn-primary"
+							>
+								Add Bookmark
+							</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+		<div
+			id="editBookmarkModal"
+			class="modal"
+		>
+			<div class="modal-content">
+				<div class="modal-header">
+					<h2>Edit Bookmark</h2>
+					<span class="close">&times;</span>
+				</div>
+				<div class="modal-body">
+					<form id="editBookmarkForm">
+						<input
+							type="hidden"
+							id="editId"
+						/>
+						<div class="form-group">
+							<label for="editTitle">Title:</label>
+							<input
+								type="text"
+								id="editTitle"
+								required
+							/>
+						</div>
+						<div class="form-group">
+							<label for="editDescription">Description:</label>
+							<textarea
+								id="editDescription"
+								rows="3"
+							></textarea>
+						</div>
+						<div class="form-group">
+							<label for="editTags">Tags:</label>
+							<input
+								type="text"
+								id="editTags"
+								placeholder="tech, programming, tutorial"
+							/>
+						</div>
+						<div class="form-group">
+							<label>
+								<input
+									type="checkbox"
+									id="editReadStatus"
+								/>
+								Mark as read
+							</label>
+						</div>
+						<div class="form-group">
+							<label>
+								<input
+									type="checkbox"
+									id="editFavorite"
+								/>
+								Mark as favorite
+							</label>
+						</div>
+						<div class="form-actions">
+							<button
+								type="button"
+								class="btn btn-secondary"
+								id="editCancelBtn"
+							>
+								Cancel
+							</button>
+							<button
+								type="submit"
+								class="btn btn-primary"
+							>
+								Save Changes
+							</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+		<script
+			src="index.js"
+			type="module"
+		></script>
+		<script>
+			if ('serviceWorker' in navigator) {
+				window.addEventListener('load', function () {
+					navigator.serviceWorker.register('sw.js');
+				});
+			}
+		</script>
+	</body>
+</html>
